--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     "test"
   ],
   "dependencies": {
-    "debug": "~2.2.0"
+    "lodash.foreach": "^3.0.3"
   },
   "devDependencies": {
-    "benchmark": "~1.0.0",
-    "cli-table": "~0.3.1",
     "coveralls": "^2.11.2",
     "eslint-config-mongodb-js": "^0.1.5",
     "istanbul": "^0.3.17",
