--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test"
   ],
   "dependencies": {
-    "lodash.foreach": "^3.0.3"
+    "lodash": "^3.10.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
